# bazel-broker

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY.md  go.mod  go.sum
.github/workflows/: release.yml
apps/MenuBar/: CLAUDE.md  project.yml
cache-config/: README.md  bazelrc.fragment  measure.sh  setup.sh
cmd/broker/: main.go
cmd/brokerctl/: cmd_drain.go  cmd_kill.go  cmd_ls.go  cmd_profile.go  cmd_watch.go  main.go
deploy/: com.bazelbroker.broker.plist  install.sh
internal/admission/: doc.go  dod_test.go  engine.go  engine_test.go  gates.go  gates_test.go  http.go  http_test.go  probe.go  probe_darwin.go  probe_other.go  registry.go  run.go  wiring.go  wrapper_integration_test.go
internal/api/: api.go  contract_test.go
internal/apiclient/: apiclient.go  apiclient_test.go  golden_test.go
internal/bep/: diskcache.go  diskcache_test.go  dispatch.go  doc.go  e2e_test.go  helpers_test.go  ingest.go  ingest_test.go  json.go  manager.go  perfetto.html  provider.go  provider_test.go  tailer.go
internal/cli/: client.go  client_test.go  config.go  config_test.go  exit.go  profile.go  profile_test.go  render.go  render_test.go  watch.go  watch_test.go
internal/config/: config.go  config_io_test.go  config_test.go
internal/discovery/: doc.go  e2e_darwin_test.go  errno_darwin.go  kill.go  kill_test.go  killer.go  killer_test.go  libproc_darwin.go  libproc_darwin_test.go  pidpath_darwin.go  pidpath_stub.go  reconcile.go  reconcile_test.go  scanner.go  scanner_darwin.go  scanner_stub.go  worktree.go  worktree_test.go
internal/genproto/: gen.go
internal/httpapi/: events.go  middleware.go  seams.go  server.go  server_test.go
internal/logging/: logging.go  logging_test.go
internal/metrics/: alert.go  metrics.go  metrics_test.go
internal/registry/: hub.go  registry.go  registry_test.go
internal/store/: metrics.go  metrics_store_test.go  schema.sql  schema_v2.sql  store.go  store_test.go
internal/version/: version.go
internal/web/: integration_test.go  session.go  web.go  web_test.go
plans/: 01-architecture.md  02-epics.md
plans/epics/: 00-consolidated-review.md  E0-scaffolding.md  E1-cache-config.md  E2-broker-core.md  E3-discovery-kill.md  E4-bep-metrics.md  E5-admission-wrapper.md  E6-brokerctl-cli.md  (+2 more)
scripts/: dist.sh  loadtest.sh  smoke.sh  up.sh  verify-fast.sh
testdata/: README.md  fake-bazel.sh
testdata/ios-app/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
testdata/ios-app/Sources/App/: BUILD.bazel  BrokerDemoApp.swift  Info.plist
testdata/workspace/: BUILD.bazel  MODULE.bazel  hello.sh
tools/: bazel  tools.go
(+52 files in other folders)
