"""Broker iOS demo — a small rules_apple iOS app with a few dummy Swift packages.

This is the end-to-end verification fixture for Bazel Broker: building it across
worktrees produces real Swift compile actions, a real disk cache, a real BEP stream,
and a real --profile, which the broker (E1/E3/E4) is exercised against.
"""

module(
    name = "broker_ios_demo",
    version = "0.0.1",
)

bazel_dep(name = "apple_support", version = "2.6.1")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "platforms", version = "1.1.0")
