load("@rules_swift//swift:swift.bzl", "swift_library")

exports_files(["Info.plist"])

swift_library(
    name = "AppLib",
    srcs = ["BrokerDemoApp.swift"],
    module_name = "AppLib",
    visibility = ["//visibility:public"],
    deps = [
        "//Packages/Analytics",
        "//Packages/Greeting",
    ],
)
